syntax = "proto3";

option java_generic_services = true;

message WithdrawalRequest {
  string userId = 1;
  double amount = 2;
  string ccy = 3;
}

message WithdrawalResponse {
  string message = 1;
}


service Withdraw {
  rpc Withdraw(WithdrawalRequest) returns (WithdrawalResponse);
}